regionselect image stretching fix, v0.0.57

--- a/src/components/RegionSelect/ImageContainer.module.styl
+++ b/src/components/RegionSelect/ImageContainer.module.styl
@@ -1,15 +1,18 @@
 .container
-  position: relative;
   box-sizing: border-box;
-  width: 100%;
+
+  margin: 0
+  padding: 0
+  position: relative;
 
 
 .image
-  width: 100%
+  max-width: 100%
   margin: 0
   padding: 0
 
   user-select: none;
+
 
 .region
   box-sizing: border-box;
